Touch & CSS Canvas Fixes
* Fix canvas not staying in the center of the screen + expanding off screen on mobile
* Fix touch and mouse clicks should work better
* Update touch now has a function for input touch events

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,24 +1,25 @@
-
 body {
     -webkit-touch-callout: none;                /* prevent callout to copy image, etc when tap to hold */
     -webkit-text-size-adjust: none;             /* prevent webkit from resizing text to fit */
     -webkit-user-select: none;                  /* prevent copy paste, to allow, change 'none' to 'text' */
     font-family: system-ui, -apple-system, -apple-system-font, 'Segoe UI', 'Roboto', sans-serif;
     font-size:12px;
-    height:100vh;
-    margin:0px;
-    padding:0px;
-    /* Padding to avoid the "unsafe" areas behind notches in the screen */
-    padding: env(safe-area-inset-top, 0px) env(safe-area-inset-right, 0px) env(safe-area-inset-bottom, 0px) env(safe-area-inset-left, 0px);
     text-transform:uppercase;
-    width:100%;
+    background-color: rgb(15, 17, 22);
+    margin: 0;
+    overflow: hidden;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
 }
 
-html{
-    background-color: rgb(15, 17, 22);
-    width:100%;
-    height:auto;
+div {
+    border: solid 1px rgb(0, 191, 255);
+    max-width: 100vw;
     overflow: hidden;
+    text-align: center;
+    position: relative;
 }
 
 img{
@@ -26,31 +27,21 @@ img{
     image-rendering: -webkit-optimize-contrast;
 }
 
-#canvas{
-    border: 1px solid rgb(0, 187, 255);
-    width:1088px;
-    height:640px;
-    position: absolute;
-    top:50%;
-    left:50%;
-    transform: translate(-50%, -50%);
+#canvas,
+#overlay {
+    display: block;
+    margin: 0 auto;
 }
 
-#bg{
-    width:1088px;
-    height:640px;
-    position: absolute;
-    top:50%;
-    left:50%;
-    transform: translate(-50%, -50%);
+#canvas {
+    background-color: rgb(22, 26, 27);
 }
 
-#overlay{
-    width:1088px;
-    height:640px;
+#overlay {
     position: absolute;
-    top:50%;
-    left:50%;
-    transform: translate(-50%, -50%);
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    z-index: 1;
 }
-
